--- a/_posts/2015-03-29-welcome.markdown
+++ b/_posts/2015-03-29-welcome.markdown
@@ -4,6 +4,10 @@ title:  "Welcome, folks"
 date:   2015-08-29 02:12:00
 categories: Common
 comments: true
+author_name: "Test author name"
+author_url: "http://itdevel.com"
+author_image: "http://sotnikdv.github.io/assets/images/profile.png"
+author_bio: "Test author bio"
 ---
 
 For the last few years a lot of my colleagues, experienced engineers and beginners, asked me same questions many times.
