--- a/_posts/2015-03-29-welcome.markdown
+++ b/_posts/2015-03-29-welcome.markdown
@@ -27,4 +27,4 @@ The only thing I can say, it's all about IT.
 
 ### How to Subscribe
 
-You can use RSS feed or you can just add me on [Google+](http://plus.google.com/109421189749606131821) or, if you are my colleague or friend, on [LinkedIn](https://www.linkedin.com/in/sotnikdv). I'll share posts to these social networks.
+You can use <a href="/rss.xml">RSS</a> feed.
