--- a/_posts/2015-03-29-welcome.markdown
+++ b/_posts/2015-03-29-welcome.markdown
@@ -7,7 +7,7 @@ comments: true
 author_name: "Dmytro Sotnyk"
 author_url: "http://sotnikdv.github.io"
 author_image: "http://sotnikdv.github.io/assets/images/profile.png"
-author_bio: "I'm Grid Architect at GridDynamics in San Francisco, USA. You can find me also in <a href="http://plus.google.com/109421189749606131821">Google+</a> or <a href="https://www.linkedin.com/in/sotnikdv">LinkedIn</a>."
+author_bio: 'I`m Grid Architect at GridDynamics in San Francisco, USA. You can find me also in <a href="http://plus.google.com/109421189749606131821">Google+</a> or <a href="https://www.linkedin.com/in/sotnikdv">LinkedIn</a>.'
 ---
 
 For the last few years a lot of my colleagues, experienced engineers and beginners, asked me same questions many times.
