--- a/_posts/2015-03-29-welcome.markdown
+++ b/_posts/2015-03-29-welcome.markdown
@@ -15,15 +15,9 @@ A lot of information was shared by me in personal and group conversations or eve
 
 So guys, that's it. I decided to create the technical blog, as many of you proposed to me.
 
-### Expected areas and technical level
+### TODO
 
-Unlike from my other project, [J2Core](https://j2core.com/), which is oriented on Java Core beginners only, this blog have no "age limits", just maybe target audience.
-
-So don't be confused with a mix of articles from Architecture to Management and with technical level from Juniour to Seniour, just skip articles which are below or above of your current technical level. From my side I'll try to mark them properly.
-
-Keep in mind that I'm Grid Architect / Development Manager / System Administrator / DBA etc. with more than 13 years experience, but in the same time I'm still mentoring Java Beginners. So, guys, you can find there ... almost anything.
-
-The only thing I can say, it's all about IT.
+TODO
 
 ### How to Subscribe
 
