--- a/_posts/2015-03-29-welcome.markdown
+++ b/_posts/2015-03-29-welcome.markdown
@@ -11,15 +11,15 @@ author_image: "http://sotnikdv.github.io/assets/images/profile.png"
 author_bio: 'I`m Grid Architect at GridDynamics in San Francisco, USA. You can find me also in <a href="http://plus.google.com/109421189749606131821">Google+</a> or <a href="https://www.linkedin.com/in/sotnikdv">LinkedIn</a>.'
 ---
 
-Welcome to  one more blog about Research in IT, from Management to Architecture. But wait... **This particular one is an open-source project, based on the GitHub!**
 
-So, if you <S>_want to fix a bug_</S> found mistake, or outdated information or you want to <S>_implement new feature_</S> add something to an article - just go ahead and create pull request!
+Welcome to  one more blog about Research in IT, from Management to Architecture. But wait...
 
-This is collaborative blog, so you may contribute your own article to the articlebase. Open as Wikipedia, but with workflow as in open-source project. 
+**This is collaborative blog, open as Wikipedia, but with workflow as in open-source project. So now you can make better existing posts or create your own.**
+
+If you <S>_want to fix a bug_</S> found mistake, or outdated information or you want to <S>_implement new feature_</S> add something to an article - just go ahead and create pull request!
 
 And one more thing, every article is marked with an author details plus list of editors, so you may include it to your professional profile. 
 
-**So, we are waiting for you pull requests.**
 
 ### What?! Again!
 
