--- a/_posts/2015-03-29-welcome.markdown
+++ b/_posts/2015-03-29-welcome.markdown
@@ -49,7 +49,7 @@ I'm just mainteiner of the project and author of some articles. You can take par
 
 ### Yet another blogging platform?
 
-Forget about blogging platforms, it's the GitHub open-source project, focused on posts instead of code. So you can edit any posts, work with GIT repository, send pull requests or fork the project.
+Forget about blogging platforms, it's the GitHub-based open-source project, focused on posts instead of code. So you can edit any posts, work with GIT repository, send pull requests or fork the project.
 
 ### Who will merge changes?
 
